--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,10 +58,10 @@
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameText" />
+        app:layout_constraintTop_toBottomOf="@+id/registerNameText" />
 
     <EditText
-        android:id="@+id/nameText"
+        android:id="@+id/registerNameText"
         android:layout_width="347dp"
         android:layout_height="48dp"
         android:layout_marginTop="36dp"
