--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="14dp"
+    android:paddingRight="14dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,17 +20,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="48dp"
             android:text="Category"
             android:textColor="#000000"
-            android:textSize="24dp"
+            android:textSize="40dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.061"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imagenPrincipal"
             android:layout_width="383dp"
             android:layout_height="308dp"
             android:layout_marginStart="4dp"
@@ -39,37 +42,37 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
-            app:srcCompat="@drawable/sushinigiri"
+            app:srcCompat="@drawable/sushirestaurant"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/restaurantCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="64dp"
+            android:shadowColor="#000000"
             android:text="Sushi"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="36dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.024"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/imagen1"
+            app:layout_constraintTop_toBottomOf="@+id/imagenPrincipal" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imagen1"
             android:layout_width="160dp"
             android:layout_height="275dp"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="1dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/restaurantCategory"
+            app:srcCompat="@drawable/sushinigiri"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imagen3"
             android:layout_width="187dp"
             android:layout_height="129dp"
             android:layout_marginStart="24dp"
@@ -79,70 +82,85 @@
             android:layout_marginRight="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.343"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            app:layout_constraintStart_toEndOf="@+id/imagen1"
+            app:layout_constraintTop_toBottomOf="@+id/imagen2"
+            app:srcCompat="@drawable/horizontal"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="382dp"
-            android:layout_height="79dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
+            android:id="@+id/imagen4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5"
+            android:paddingRight="14dp"
+            app:layout_constraintStart_toStartOf="@+id/imagen1"
+            app:layout_constraintTop_toBottomOf="@+id/imagen3"
+            app:srcCompat="@drawable/horizontal2"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imagen2"
             android:layout_width="187dp"
             android:layout_height="129dp"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintStart_toEndOf="@+id/imagen1"
+            app:layout_constraintTop_toBottomOf="@+id/restaurantCategory"
+            app:srcCompat="@drawable/sushi"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/restaurantDescription"
             android:layout_width="382dp"
-            android:layout_height="84dp"
+            android:layout_height="268dp"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
+            android:paddingRight="10dp"
             android:text="Pioneered by Chef Nobu Matsuhisa, the iconic Nobu menu is influenced by his years of studying Japanese cuisine in Tokyo and his extensive travels. The diverse celebration of flavors formed Nobu’s trademark ‘Nobu Style’, which is intrinsic to all Nobu menus worldwide. "
+            android:textAllCaps="false"
+            android:textColor="#000000"
+            android:textSize="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.179"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+            app:layout_constraintTop_toBottomOf="@+id/imagen4" />
 
         <Button
             android:id="@+id/menuButton"
-            android:layout_width="382dp"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
+            android:paddingRight="16dp"
             android:text="MENU"
-            app:backgroundTint="#E85E5E"
+            android:textSize="26dp"
+            app:backgroundTint="#CD3636"
             app:cornerRadius="50dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.254"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/restaurantDescription" />
+
+        <TextView
+            android:id="@+id/restaurantName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Nobu"
+            app:layout_constraintStart_toStartOf="@+id/imagenPrincipal"
+            app:layout_constraintTop_toBottomOf="@+id/imagenPrincipal" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
