--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".Discover">
+        tools:context=".models.models.DiscoverActivity">
 
         <TextView
             android:id="@+id/textView3"
@@ -21,9 +21,9 @@
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="48dp"
-            android:text="Category"
+            android:text="@string/category"
             android:textColor="#000000"
-            android:textSize="40dp"
+            android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:shadowColor="#000000"
-            android:text="Sushi"
+            android:text="@string/sushi"
             android:textColor="#000000"
             android:textSize="36dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:paddingRight="10dp"
-            android:text="Pioneered by Chef Nobu Matsuhisa, the iconic Nobu menu is influenced by his years of studying Japanese cuisine in Tokyo and his extensive travels. The diverse celebration of flavors formed Nobu’s trademark ‘Nobu Style’, which is intrinsic to all Nobu menus worldwide. "
+            android:text="@string/sushi_description"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textSize="24dp"
@@ -142,7 +142,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:paddingRight="16dp"
-            android:text="MENU"
+            android:text="@string/menu"
             android:textSize="26dp"
             app:backgroundTint="#CD3636"
             app:cornerRadius="50dp"
@@ -158,7 +158,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:text="Nobu"
+            android:text="@string/sushi_restaurant_name"
             app:layout_constraintStart_toStartOf="@+id/imagenPrincipal"
             app:layout_constraintTop_toBottomOf="@+id/imagenPrincipal" />
     </androidx.constraintlayout.widget.ConstraintLayout>
