--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -4,73 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".models.models.CategoriesActivity">
+    tools:context=".models.models.models.models.CategoriesActivity">
 
-    <Button
-        android:id="@+id/discoverButton"
-        android:layout_width="272dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="112dp"
-        android:shadowColor="#FFFFFF"
-        android:text="@string/discover"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:backgroundTint="#FFFFFF"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_width="188dp"
+        android:layout_height="194dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="#000000"
-        app:strokeWidth="1dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="272dp"
+        android:id="@+id/push"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:text="@string/sushi"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:backgroundTint="#FFFFFF"
-        app:cornerRadius="10dp"
+        android:text="push here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/discoverButton"
-        app:strokeColor="#000000"
-        app:strokeWidth="1dp" />
+        app:layout_constraintTop_toBottomOf="@+id/image1" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="272dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:text="@string/pizza"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:backgroundTint="#FFFFFF"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:strokeColor="#000000"
-        app:strokeWidth="1dp" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="272dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:text="@string/hamburguers"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:backgroundTint="#FFFFFF"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
-        app:strokeColor="#000000"
-        app:strokeWidth="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
