--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".models.models.DiscoverActivity">
+        tools:context=".models.models.models.models.DiscoverActivity">
 
         <TextView
             android:id="@+id/textView3"
@@ -32,7 +32,7 @@
 
         <ImageView
             android:id="@+id/imagenPrincipal"
-            android:layout_width="383dp"
+            android:layout_width="match_parent"
             android:layout_height="308dp"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
@@ -40,6 +40,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:srcCompat="@drawable/sushirestaurant"
