--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#292525"
-    tools:context=".models.models.LoginActivity">
+    tools:context=".models.models.models.models.LoginActivity">
 
     <TextView
         android:id="@+id/loginText"
