--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#292525"
-    tools:context=".models.models.MainActivity">
+    tools:context=".models.models.models.models.MainActivity">
 
     <Button
         android:id="@+id/rButton"
@@ -16,7 +16,7 @@
         android:layout_marginTop="460dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:text="Register"
+        android:text="@string/register"
         app:backgroundTint="#FF03DAC5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.058"
@@ -30,7 +30,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="460dp"
-        android:text="Log in "
+        android:text="@string/login"
         app:backgroundTint="#FF03DAC5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="88dp"
         android:background="#292525"
-        android:text="DINNER 2 U"
+        android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
