--- a/app/src/main/res/layout/layout_category_list_item.xml
+++ b/app/src/main/res/layout/layout_category_list_item.xml
@@ -1,10 +1,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/categoryCardID"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="8dp"
+    android:layout_margin="16dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="16dp">
+    app:cardElevation="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +24,9 @@
             android:id="@+id/nameCategoryTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:gravity="center"
+            android:textSize="24sp"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
