--- a/app/src/main/res/layout/layout_cart_list_item.xml
+++ b/app/src/main/res/layout/layout_cart_list_item.xml
@@ -13,40 +13,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/dish_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:adjustViewBounds="true"
-            android:padding="0dp"
-            android:scaleType="fitXY"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/container1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dish_image">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/CartItemDishName"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="left"
                 android:text="Dish name"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
-                android:textSize="19sp" />
+                android:textSize="19sp"
+                android:layout_alignParentLeft="true"/>
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/CartItemDishPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:gravity="right"
+                android:text="TextView"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
