--- a/app/src/main/res/layout/activity_dish_detail.xml
+++ b/app/src/main/res/layout/activity_dish_detail.xml
@@ -21,6 +21,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="64dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="TextView" />
@@ -56,6 +57,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="24dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dishDescription"
             tools:text="TextView" />
@@ -79,8 +81,8 @@
             android:layout_marginTop="56dp"
             android:layout_marginEnd="56dp"
             android:layout_marginRight="56dp"
-            android:text="@string/back"
-            app:backgroundTint="#A39999"
+            android:text="GO TO CART"
+            app:backgroundTint="#4CAF50"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dishDetailDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
